Redoing intros ofr BMI and platelet/protein chapters

--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -42,10 +42,12 @@ Diseases affecting the heart and blood vessels are the major cause of mortality 
 Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovsacular events as an example[@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) that are associated with levels of LDL-C can be used. These SNPs should also not be associated with other confounding factors such as smoking. If people with SNPs which lower LDL-C also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and therefore other lines of evidence and study designs such as RCTs are required.
 
 (ref:scaption-MR-statins) Mendelian randomisation example using LDL levels and cardiovascular events
-(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. Figure from Bennett et al.[@Bennett2017].
+(ref:caption-MR-statins) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether lowering levels of low density lipoproteins can decrease risk of cardiovascular events**. 
 ```{r MR-statins, echo = FALSE, fig.cap="(ref:caption-MR-statins)", fig.scap="(ref:scaption-MR-statins)"}
 include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = NA)
 ```
+\vspace*{-1em}
+\noindent Figure from Bennett et al.[@Bennett2017].
 
 ## The genetics of obesity
 Mendelian randomization can be used to estimate the causal relationship between a modifiable exposure, such as BMI, and outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
@@ -72,11 +74,11 @@ When a patient has a clot in one of the coronary arteries, they often undergo pe
 
 As BMI is associated with increased rates of thrombotic events and platelets are one of the key cells involved in thrombosis, it is likely that platelets are hyperactive compared to people who have a BMI in the healthy range. Various studies have attempted to address this question. There is mixed evidence for an effect of BMI on platelet hyperactivity. For example, in patients who were treated with clopidogrel there was a positive association between BMI and platelet activation in response to the agonist ADP[@Nardin2015]. Studies looking at BMI and platelet function are often limited by small sample sizes and are often restricted to patients being on antiplatelet therapy[@Deharo2014; @Sibbing2007; @Pankert2014]. Less is known about the association between BMI and platelet function in the absence of antiplatelet therapies. To address this, there needs to be a cohort which has information about BMI, potential circulating intermediates and platelet function. Genetic data would therefore help address causality. As this is currently not all available within a large cohort, separate cohorts are required to explore different associations.
 
-## Experimental techniques to measure platelet function
+## Experimental techniques to measure platelet function {#platelet-function-techniques}
 Platelet function can be measured by various laboratory techniques. Light transmission aggregometry (LTA) quantifies aggregation by how much light passes through the sample. The more aggregation, the clearer the solution and the more light passes through and is detected. Other techniques commonly used include using fluorescently labelled antibodies to detect surface receptors. Measuring basal levels of receptors may give information about the function of the platelet. Some receptors increase their expression in response to platelet agonists (such as the integrin α~IIb~β~3~ and the adhesion receptor P-selectin) such as protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another technique which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, this causes intracellular calcium release[@Varga-Szabo2009]. Another marker of platelet activation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. dual stimulation by collagen and thrombin), the PS is becomes exposed on the outer surface of the membrane, thereby activating factors in the coagulation pathway[@Bevers1983]. Changes in PS exposure can be measured using a fluorescently labelled antibody. Techniques such as Western Blotting can be used to quantify the levels of total protein of phosphoprotein. This can therefore be used to explore changes in signalling in platelets under basal conditions, or after stimulation with an agonist. These methods are very well established, however they are often time consuming and expensive.
 
 ## Platelet traits as proxies for platelet function
-Although there are not many large studies directly exploring platelet function, other measures of platelet characteristics are widely used in the clinic and among cohort studies. These charactertics are often reported as part of a routine full blood count. These include platelet count (PLT, absolute number of platelets), plateletcrit (PCT, the volume occupied by platelets), mean platelet volume (MPV) and platelet distribution width (PDW). These are often used as diagnostic tools, for example a low platelet count is demonstrative of thrombocytopenia and a high platelet count is known as thrombocytosis/thrombocythaemia. Platelet traits have also been implicated in cardiovascular disease: there is MR evidence that higher PLT contributes to the risk of ischaemic stroke[@Gill2018], thereby suggesting that these platelet parameters have functional and clinical relevance. There is also evidence that alterations in these parameters associate with platelet function. For example, higher platelet count has been shown to associate with increased platelet aggregation[@Wurtz2012]. Previous studies have explored the association between BMI and platelet paramteres. Some studies have foudn evidence for an association between BMI and both platelet count and mean platelet volume, however other studies have lacked evidence for an effect[@Furuncuoglu2016; @Han2018a; @Coban2005; @Heffron2018], suggesting that these effects are null. These observational studies may be subject to confounding, bias and reverse causation, therefore it is unclear whether there is a causal effect of BMI on these platelet traits, or whether effects are due to other factors. 
+Although there are not many large studies directly exploring platelet function, other measures of platelet characteristics are widely used in the clinic and among cohort studies. These charactertics are often reported as part of a routine full blood count. These include platelet count (PLT, absolute number of platelets), plateletcrit (PCT, the volume occupied by platelets), mean platelet volume (MPV) and platelet distribution width (PDW). These are often used as diagnostic tools, for example a low platelet count is demonstrative of thrombocytopenia and a high platelet count is known as thrombocytosis/thrombocythaemia. Platelet traits have also been implicated in cardiovascular disease: there is MR evidence that higher PLT contributes to the risk of ischaemic stroke[@Gill2018], thereby suggesting that these platelet parameters have functional and clinical relevance. There is also evidence that alterations in these parameters associate with platelet function. For example, higher platelet count has been shown to associate with increased platelet aggregation[@Wurtz2012]. Previous studies have explored the association between BMI and platelet paramteres. Some studies have found evidence for an association between BMI and both platelet count and mean platelet volume, however other studies have lacked evidence for an effect[@Furuncuoglu2016; @Han2018a; @Coban2005; @Heffron2018], suggesting that these effects are null. These observational studies may be subject to confounding, bias and reverse causation, therefore it is unclear whether there is a causal effect of BMI on these platelet traits, or whether effects are due to other factors. 
 
 More recent haematology analysers such as the Sysmex XN series analysers can provide additional information about platelet structure. They use a combination of fluorescence and impedence flow cyotemtry. Additional readouts provided by these analyzers include immature platelet count (IPC, the number of immature platelets) as well as immature platelet fraction (IPF, the fraction of platelets which are immature), based on a gating of their forward scatter (FSC, size) and side fluorescence (SFL, an indicator of mRNA content). Detection of PLT and IPF by flow cytometry is shown in Figure \@ref(fig:sysmex-ipf)[@Corpataux2020]. Immature platelets, or reticulated platelets, are the youngest platelets in circulation. They persist for between 24 and 36 hours[@Corpataux2020]. Immature platelets are larger in size and have more mRNA than older circulating platelets. Over time the mRNA degrades and they gradually decrease in size. There are various studies which have suggested that a larger number of immature platelets may increase the risk of suffering from major adverse cardiovascular events (MACE)[@Ibrahim2014]. This suggests that immature platelets may be more reactive.
 
