--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -37,11 +37,9 @@ Supplementary Tables 1-7 can be found here https://github.com/lucygoudswaard/myt
 
 ## Introduction
 
-Obesity has tripled worldwide since 1975, now affecting around 40% of adults in the United States and 26% of adults in the UK[@Bluher2019]. The average body mass index (BMI) of the UK adult population is now in the conventional 'overweight' category (BMI between 25 and 30 kg/m^2^)[@Wade2018] and 'overweight' is now more common than 'normal-weight' in middle age in many high-income countries[@NCD-RisC2016]. BMI is often used as a proxy for adiposity given high correlations between BMI and more objectively measured fat mass indices[@Bell2018a]. Higher adiposity is a major risk factor for various noncommunicable diseases including cardiovascular diseases such as coronary heart disease (CHD) and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. These BMI-disease associations are supported by prospective observational studies and, more recently, by Mendelian randomization (MR) studies[@Nordestgaard2012; @Dale2017] which use genetic variation reliably associated with BMI to re-estimate effects of BMI on disease outcomes. Given the properties of genetic variation, this method helps to overcome issues such as confounding and reverse causation which commonly occur with observational studies[@Smith2003].
+The previous chapters (Chapter \@ref(BMI-platelets-INTERVAL) and Chapter \@ref(BMI-platelets-clinic)) have provided evidence that higher body mass index raises immature platelet count and alters levels of platelet proteins which are important in platelet activation. As well as this, chapter \@ref(chemokine-platelets) indicated that application of MDC and TARC on platelets _ex vivo_ leads to platelet activation. Despite this evidence, it is unclear how a higher BMI leads to an increased risk of thrombosis, in particular an increase in platelet production and changes in platelet signalling proteins. It is possible that molecules which circulate in the blood may be mediating this effect as platelets also circulate in the blood and blood vessels are the site of thrombi. Previous studies have largely focused on the impact of higher BMI on the lipidome including traits such as cholesterol and triglycerides in lipoprotein subtypes (e.g. low-density lipoprotein (LDL) and high-density lipoprotein (HDL) particles)[@Bell2018a; @Wurtz2014] and on inflammatory molecules such as C-reactive protein (CRP)[@Wurtz2014; @Timpson2011]. Fewer studies have explored the effect of adiposity on the circulating proteome profile[@Cominetti2018].
 
-Despite MR studies supporting a causal role of adiposity for cardiometabolic diseases, and randomised trials supporting the effectiveness of weight loss in reducing disease risk[@Wing2011], the molecular footprint of adiposity is not well understood. Previous studies have largely focused on the impact of higher BMI on the lipidome including traits such as cholesterol and triglycerides in lipoprotein subtypes (e.g. low-density lipoprotein (LDL)  and high-density lipoprotein (HDL) particles)[@Bell2018a; @Wurtz2014] and on inflammatory molecules such as C-reactive protein (CRP)[@Wurtz2014; @Timpson2011]. 
-
-A benefit of studying the systematic effects of BMI on the circulating proteome is that proteins are often more suitable pharmacological targets than metabolites. Efforts to study the effect of BMI on the proteome have generally been in an observational framework[@Cominetti2018]. It is estimated that 25% of proteins in the human proteome circulate in blood[@Gold2012], which is important as the majority of druggable targets are such proteins[@Imming2006]. Studying the effect of BMI on a large set of proteins has only recently become possible with newly developed proteomic technologies such as the SomaLogic platform, with the ability to quantify enzymes, protein kinases and transport proteins with unprecedented sensitivity[@Rohloff2014]. Utilisation of SomaLogic within a trial or cohort setting has recently become more widespread, such as within the INTERVAL study, a UK cohort of blood donors[@Sun2018]. There is evidence that proteins which change as a result of a higher BMI may contribute to cardiometabolic disease: identification of such proteins is important in understanding how higher BMI causes disease and to identify targets which may benefit from pharmacological intervention. It is possible that proteins that are altered by BMI may contribute to cardiometabolic disease by activating platelets (Chapter \@ref(chemokine-platelets)).
+A benefit of studying the systematic effects of BMI on the circulating proteome is that proteins are often more suitable pharmacological targets than metabolites. Efforts to study the effect of BMI on the proteome have generally been in an observational framework[@Cominetti2018]. It is estimated that 25% of proteins in the human proteome circulate in blood[@Gold2012], which is important as the majority of druggable targets are such proteins[@Imming2006]. Studying the effect of BMI on a large set of proteins has only recently become possible with newly developed proteomic technologies such as the SomaLogic platform, with the ability to quantify enzymes, protein kinases and transport proteins with unprecedented sensitivity[@Rohloff2014]. Utilisation of SomaLogic within a trial or cohort setting has recently become more widespread, such as within the INTERVAL study, a UK cohort of blood donors[@Sun2018]. There is evidence that proteins which change as a result of a higher BMI may contribute to thrombosis (ref Andrei's paper): identification of such proteins is important in understanding how higher BMI causes disease and to identify targets which may benefit from pharmacological intervention. It is possible that proteins that are altered by BMI may contribute to thrombosis by activating platelets (Chapter \@ref(chemokine-platelets)).
 
 In this chapter, the aim was to measure associations between adiposity and the human proteome and to also estimate the underlying effects in a causal framework (Figure \@ref(fig:BMI-protein-graphic)). Using data on 2737 participants from INTERVAL, the effects of BMI on 4034 (3622 unique) plasma protein traits were estimated, in both observational and MR frameworks. The agreement between effect estimates from different methods were examined and enrichment analyses of the most strongly altered proteins were performed to map their potential relevance to cardiovascular disease.
 
@@ -93,7 +91,7 @@ To investigate whether any protein groups showed a particularly strong relations
  
 ```
 
-To explore whether there was a systematic difference in the association of proteins within these clusters and BMI, the beta coefficients from the observational linear regressions or MR models were transformed into their absolute values and divided by their standard error (SE). The absolute betas divided by their SEs in each cluster was compared using a one-tailed pairwise Wilcox test to identify which clusters showed a stronger association with BMI. For the cluster(s) showing evidence for larger absolute beta coefficients, an enrichment analysis was performed using DAVID bioinformatics resources 6.8[@Huang2009]. Enrichment was assessed by using the uniprot IDs for the proteins in the cluster and comparing these proteins with the uniprot IDs of the full SomaLogic protein list. Enrichment for protein involvement in disease (using the genetic association database (GAD) disease classes[@Becker2004a]) of the protein cluster was assessed by fold enrichment and a Bonferroni-corrected P-value to account for multiple testing. Proteins that were associated with BMI in confounder-adjusted observational analyses at P<1.4x10^-5^ were also entered into the disease enrichment tool and compared with the total proteins (as described for cluster enrichment). Analyses were performed using R version 3.4.2[@Team2019a]. R code used for analyses available upon request.
+To explore whether there was a systematic difference in the association of proteins within these clusters and BMI, the beta coefficients from the observational linear regressions or MR models were transformed into their absolute values and divided by their standard error (SE). The absolute betas divided by their SEs in each cluster was compared using a one-tailed pairwise Wilcox test to identify which clusters showed a stronger association with BMI. For the cluster(s) showing evidence for larger absolute beta coefficients, an enrichment analysis was performed using DAVID bioinformatics resources 6.8[@Huang2009]. Enrichment was assessed by using the uniprot IDs for the proteins in the cluster and comparing these proteins with the uniprot IDs of the full SomaLogic protein list. Enrichment for protein involvement in disease (using the genetic association database (GAD) disease classes[@Becker2004a]) of the protein cluster was assessed by fold enrichment and a Bonferroni-corrected P-value to account for multiple testing. Disease classes are broadly grouped, therefore the main disease class of interest is cardiovascular disease as this class would incorporate CHD/stroke. Proteins that were associated with BMI in confounder-adjusted observational analyses at P<1.4x10^-5^ were also entered into the disease enrichment tool and compared with the total proteins (as described for cluster enrichment). Analyses were performed using R version 3.4.2[@Team2019a]. 
 
 
 ## Results
@@ -113,7 +111,7 @@ excn <- c(30721, 30721, NA, NA, 30719, 30661, 30659, 29958, NA, NA, NA, 27124, N
 ChiP <- c(0.76, 0.04, NA, NA, 0.26, 0.005, 0.66, 0.88, NA, NA, NA, 0.34, NA, NA, NA, NA)
 mytable = cbind(var, incmean, ninc, excmean, excn, ChiP)
 colnames(mytable) <- c("Variable",  "Included Mean (SD) or %", "Included N", "Excluded Mean (SD) or %", "Excluded N", "P value for difference (Two tailed t-test or Chi2 test)" )
-mytable %>% kable(caption = "(ref:caption-Inc-excl-part)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-Inc-excl-part)") %>% 
+mytable %>% kable(caption = "(ref:caption-Inc-excl-part)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Inc-excl-part)") %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
    add_indent(c(3, 4, 9, 10, 11, 13, 14, 15, 16), level_of_indent = 1) %>%
@@ -124,7 +122,7 @@ column_spec(1, width = "6cm") %>%
 
 ### Observational estimates of associations of BMI with protein traits 
 
-In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 1). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2 380 adults, there were 1447 associations at the same reference point (Supplementary Table 2). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^).
+In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 1). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2 380 adults, there were 1447 associations at the same reference point (Supplementary Table 2). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^). There was evidence that proteins involved in platelet activation were associated with BMI: BMI was negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^). Platelet endothelial aggregation receptor 1 (PEAR1) was negatively associated with BMI (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^). Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 2).  
 
 ### Observational associations of covariables with BMI and protein traits
 
@@ -146,7 +144,7 @@ LowerCI <- c(0.009, 0.10, 0.05, -0.12)
 UpperCI <- c(0.015, 0.25, 0.13, -0.04)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
-mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-INT-confounders-BMI)") %>% 
+mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
@@ -178,7 +176,7 @@ AdjR <- c(0.028, 0.024, 0.001, 5.96E-05, -0.0004, -0.0002)
 Fstat <- c(78.20, 66.68, 2.55, 1.16, 0.01, 0.60)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient (per 1-unit increase in GRS)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' )
-mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-INT-GRS-confounders)") %>% 
+mytable %>% kable(caption = "(ref:caption-INT-GRS-confounders)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-GRS-confounders)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "5cm")   %>%
@@ -187,7 +185,9 @@ column_spec(1, width = "5cm")   %>%
 
 ### MR estimates of associations between BMI and protein traits
 
-In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta and PILR alpha-associated neural protein. Supplementary Table 7 provides the full MR results.
+In MR analyses, eight unique BMI-protein associations were detected at the level P<1.4x10^-5^ (multiple testing reference point, Figure \@ref(fig:ObsMRforestplot2)). MR estimates provide an estimate of the causal association between protein (in SDs) per SD higher BMI. The strongest association of BMI was again with leptin (0.63 SD, 95% CI = 0.48-0.79; P=1.6x10^-15^); this was followed by the association with FABP4 (0.65 SD, 95% CI = 0.46-0.83; P=6.7x10^-12^). A strong negative association was also seen between BMI (per SD) and SHBG (-0.45 SD, 95% CI -0.65 to -0.25, P=1.4x10^-5^). Other BMI-protein associations (P<1.4x10^-5^) included positive associations with fumarylacetoacetase (FAAA), inhibin beta C chain and complement C5, and negative associations with receptor-type tyrosine-protein phosphatase delta and PILR alpha-associated neural protein. The estimates for the effect of BMI on platelet proteins generally were of a similar magnitude to the fully adjusted observational analysis. The causal estimate for the effects of BMI on PAFAH was -0.24 SD (95% CI -0.46 to -0.03, p=0.028). Similarly, the causal estimate for the effect of BMI on PEAR1 was similar to the observational estimate (-0.21 SD, 95% CI -0.43 to 0.005, p=0.06). Despite a similar magnitude of estimate, these associations were not detected as these estimates were less precise.
+
+Supplementary Table 7 provides the full MR results.
 
 (ref:caption-ObsMRforestplot2) **Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates**
 (ref:scaption-ObsMRforestplot2) Forest plot of the strongest BMI-protein Mendelian randomisation estimates and the corresponding observational estimates
@@ -309,8 +309,10 @@ For proteins with stronger MR derived association evidence, it is important to e
 
 Our results help to provide contextualisation for proteins which have already been implicated in disease. For example, results suggest a strong positive effect of BMI on FABP4, an adipokine found primarily in adipocytes and macrophages[@Furuhashi2014]. This MR estimate supports the association which has been suggested in previous observational studies[@Xu2006]. FABP4 has been implicated in cardiometabolic disease: a SNP which increases FABP4 was found to raise the odds of type II diabetes among adults[@Gudmundsdottir2020], potentially through its contribution to higher insulin resistance[@Nakamura2017]. FABP4 has also been associated with higher risk of atherosclerosis among adults[@Yeung2007]. A strong SHBG-lowering effect of higher BMI was also suggested here. The SHBG molecule is a glycoprotein which binds androgens and oestrogens and suppresses their activity[@Wallace2013]; a reduction in SHBG is therefore expected to lead to higher levels of circulating sex hormones. The negative effect of BMI on SHBG seen here supports observational findings[@Cooper2015; @Goto2014; @Baglietto2009]. When evaluating the role of SHBG in disease, MR analysis suggests that an increase in SHBG contributes to a decrease in risk of cardioembolic stroke[@Zheng2020]. Other studies have also implicated lower SHBG levels in increasing type II diabetes risk [@Ritchie2019]. The exact mechanisms leading from decreased SBHG to ill-health is unclear, but may arise as a result of the increased bioavailability of testosterone and oestrogen[@Wallace2013].
 
-Despite these possible protein involvements in cardiometabolic disease, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. We therefore examined proteins grouped into clusters of similar features, compared BMI-protein estimates of each cluster with overall estimates and explored enrichment for genes related to disease. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to cardiovascular disease, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. When IPC GWAS summary stats become available, it would be useful to perform a PheWAS of protein exposures to IPC to explore whether any proteins which are altered by BMI can affect IPC.
+There were also various platelet proteins which were detected in the plasma. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimate were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is an enzyme which binds to lipoproteins and can degreade platelet activating factor (PAF). PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be proatherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising the integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
 
-This analysis has some limitations. Firstly, although INTERVAL is one of the largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR: based on the detectable (P<1.4x10~-5~) median absolute observational effect size (0.13 SDs), our analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for our sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Secondly, height and weight were self-reported which could bias results towards the null due to systematic error in BMI measurement. However, strong correlations are often reported between self-reported and measured BMI[@Nikolaou2017] and the validity of self-reported BMI is supported by the association between the GRS for BMI and self-reported BMI in INTERVAL to the degree expected. Thirdly, the small degree of overlap between INTERVAL and UK Biobank (participants used for the source GWAS for BMI who were also in INTERVAL) may have a biasing effect on estimates, though this is likely to be towards the null. We anticipate that overall, this bias would make estimates more conservative[@Burgess2016]. Fourth, we recognise a lack of availability of possible confounders such as socio-economic position (which likely affect both BMI and protein traits related to cardiovascular disease processes[@Rosengren2019; @Tillmann2017]. Residual confounding may help account for the divergence between observed and expected P-values seen in observational versus MR models. Fifth, the proteins examined are highly correlated and we therefore may not fully be describing changes in individual proteins. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL dataset.
+Despite these possible protein involvements in cardiometabolic disease and platelet function, it remains difficult to assess the contribution of individual proteins as they are not entirely independent and any pathological effects would likely be due to a global change in protein composition. There are not distinct groupings in the SomaLogic data as there often are with, for example, metabolomics data. We therefore examined proteins grouped into clusters of similar features, compared BMI-protein estimates of each cluster with overall estimates and explored enrichment for genes related to disease. The cluster most altered by BMI (cluster 2) included most of the eight proteins with the strongest BMI effects from MR analyses, as well as various complement factors, chemokines and coagulation factors. Therefore, it is very likely that this global change in proteins would activate platelets. This cluster was also found to be enriched for genes related to cardiovascular disease, renal and metabolic diseases, and cancer. Enrichment was similar when comparing the proteins that had an observational association with BMI with all proteins included, with enrichment appearing greatest for renal and metabolic disease. Together, this suggests that changes in proteins may mediate effects of obesity on cardiometabolic diseases; more focused investigations of these proteins are now needed, especially to assess their impact on platelet function. 
 
-This chapter utilised SomaLogic to explore the relationship between BMI and plasma proteins in unprecendented scope and detail, in both an observational and MR framework. There is evidence for a broad impact of higher adiposity on the human proteome. Causal evidence was strongest for BMI in relation to proteins involved in regulating appetite, sex hormones, and inflammation. Protein alterations were found to be enriched for genes related to cardiovascular and metabolic disease. Altogether, these results help to focus attention onto new potential proteomic signatures of obesity-related disease. Further characterisation of the role of such proteomic profiles in cardiovascular disease using MR is warranted, as well as characterising the role of such proteins on platelet function.
+This analysis has some limitations. Firstly, although INTERVAL is one of the largest existing cohorts to have untargeted proteomic data based on the SomaLogic platform, the sample size is still relatively modest and may have low power to detect some associations when using MR: based on the detectable (P<1.4x10~-5~) median absolute observational effect size (0.13 SDs), our analyses had 80% power to detect MR effect sizes >= 0.33 SDs (alpha=0.05) for our sample size (N=2737)[@Brion2013]. With greater statistical power, there would likely be more proteins detected with MR. This was reinforced by the strong agreement in the magnitude of effect estimates seen in observational and MR analyses which applied throughout the effect distribution. Secondly, height and weight were self-reported which could bias results towards the null due to systematic error in BMI measurement. However, strong correlations are often reported between self-reported and measured BMI[@Nikolaou2017] and the validity of self-reported BMI is supported by the association between the GRS for BMI and self-reported BMI in INTERVAL to the degree expected. Thirdly, the small degree of overlap between INTERVAL and UK Biobank (participants used for the source GWAS for BMI who were also in INTERVAL) may have a biasing effect on estimates, though this is likely to be towards the null. We anticipate that overall, this bias would make estimates more conservative[@Burgess2016]. Fourth, we recognise a lack of availability of possible confounders such as socio-economic position (which likely affect both BMI and protein traits related to cardiovascular disease processes[@Rosengren2019; @Tillmann2017]. Residual confounding may help account for the divergence between observed and expected P-values seen in observational versus MR models. Fifth, the proteins examined are highly correlated and we therefore may not fully be describing changes in individual proteins. Evidence from case-control cohorts as well as functional and animal studies would help isolate individual proteins that are altered and contribute to disease. Finally, although analyses provide insight into the proteomic effects of BMI, it does not distinguish between the type of adiposity. It would be useful to distinguish between the effects of subcutaneous and visceral fat using dual-energy X-ray absorptiometry (DXA) derived measurements, but these were not available in the INTERVAL data set.
+
+This chapter utilised SomaLogic to explore the relationship between BMI and plasma proteins in unprecedented scope and detail, in both an observational and MR framework. There is evidence for a broad impact of higher adiposity on the circulating proteome. Causal evidence was strongest for BMI in relation to proteins involved in regulating appetite, sex hormones, and inflammation. Protein alterations were found to be enriched for genes related to cardiovascular and metabolic disease, therefore implicating an environment which may lead to platelet hyperactivity. Altogether, these results help to focus attention onto new potential proteomic signatures of obesity-related disease. Further characterisation of the role of such proteomic profiles in cardiovascular disease using MR is warranted, as well as characterising the role of such proteins on platelet function.
