--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -34,18 +34,13 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 This work is published in the journal Platelets (add reference). I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
+As indicated in the background chapter (Chapter \@ref(background)), clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may play a role. 
 
-Obesity (body mass index ≥ 30 kg/m^2^) has nearly tripled worldwide in the last 45 years [@Bluher2019]. This is a major health concern as a higher body mass index (BMI) is an important risk factor for various noncommunicable disorders, including cardiovascular disease [@Bhaskaran2018a]. Clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders, including coronary heart disease and stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. 
+Immature platelets (also known as reticulated platelets) are the youngest platelets in circulation and are detected based on having a greater forward scatter (FSC, an indicator of their size) and a greater side fluorescence (SFL, an indicator of their mRNA content)[@Ibrahim2014]. More immature platelets are indicative of enhanced platelet production[@Lev2016a] and these platelets are believed to be more prothrombotic than older circulating platelets, with more dense granule release and increased P-selectin expression[@Ibrahim2014; @Lev2016a; @Bernlochner2015a]. Higher immature platelet count is associated with adverse cardiovascular outcomes in patients with coronary artery disease[@Ibrahim2014] and reduced effectiveness of antiplatelet therapies[@Bernlochner2015a; @Ibrahim2012], suggesting that hyperactive immature platelets may contribute to adverse vascular events. Immature platelets have also been suggested to be less responsive to antiplatelet therapies such as prasugrel in acute coronary syndrome patients[@Bernlochner2015a]. 
 
-Platelets are blood cells which are essential for the cessation of bleeding upon injury to a blood vessel and are involved in thrombosis and progression of cardiovascular disease [@Koupenova2017a]. When pathologically activated, platelets can aggregate to form thrombi thereby occluding arteries and triggering a myocardial infarction or stroke [@Koupenova2017a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis [@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets [@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Mechanisms of platelet hyperactivity are unclear, but it is possible that changes in platelet numbers, size and immaturity may play a role. Furthermore, an alteration in circulating metabolites or proteins induced by obesity could modulate the activation of platelets [@Goudswaard2021].
+As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT[@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV[@Coban2005] and other studies reporting no such association[@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes[@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
 
-Platelet function can be directly assessed by various methods; these methods commonly include platelet aggregation experiments and/or using antibodies to detect platelet receptors that are expressed upon activation. One of the limitations of measuring platelet function directly is that these techniques are not widely available or readily standardized. Haematology analyzers are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Some of these characteristics have been reported to be indirect measures of platelet function [@Wurtz2012]. For example, an increase in mean platelet volume (MPV) has been reported to be predictive of vascular mortality and ischaemic heart disease [@Slavka2011]. Another commonly measured platelet characteristic is the number of platelets in circulation (platelet count, PLT). An increase in platelet count has been reported to be associated with platelet hyperactivity [@Wurtz2012] and there is evidence that higher platelet count is associated with ischaemic stroke [@Gill2018]. 
-
-Sysmex haematology analyzers are able to provide additional platelet characteristics, such as immature platelet fraction (IPF)  and immature platelet count (IPC) [@UnayDemirel2018a]. Immature platelets (also known as reticulated platelets) are the youngest platelets in circulation and are detected based on having a greater forward scatter (FSC, an indicator of their size) and a greater side fluorescence (SFL, an indicator of their mRNA content) [@Ibrahim2014]. Higher levels of immature platelets are indicative of enhanced platelet production [@Lev2016a] and these platelets are believed to be more prothrombotic than older circulating platelets, with more dense granule release and increased P-selectin expression [@Ibrahim2014; @Lev2016a; @Bernlochner2015a]. Higher immature platelet count is associated with adverse cardiovascular outcomes in patients with coronary artery disease [@Ibrahim2014] and reduced effectiveness of antiplatelet therapies [@Bernlochner2015a; @Ibrahim2012], suggesting that hyperactive immature platelets may contribute to adverse vascular events. Immature platelets have also been suggested to be less responsive to antiplatelet therapies such as prasugrel in acute coronary syndrome patients [@Bernlochner2015a]. 
-
-As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT [@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV [@Coban2005] and other studies reporting no such association [@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes [@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
-
-In this study, we used data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypotheses that are addressed in the chapter. We combined observational and Mendelian randomization (MR) approaches to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
+In this chapter, data from the INTERVAL prospective cohort (N=33388) was used to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypothesis addressed in the chapter. Here, observational and Mendelian randomization (MR) approaches were employed to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, we therefore employed MR, using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
 
 (ref:caption-BMI-platelet-overview) **Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
@@ -55,22 +50,22 @@ include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platel
 
 (ref:caption-Linear-reg-MR) **Schematic of linear regression and Mendelian randomization analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders.** Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.
 (ref:scaption-Linear-reg-MR) Schematic of linear regression and Mendelian randomization frameworks for BMI and platelet trait analyses
-```{r Linear-reg-MR, echo = FALSE , fig.cap="(ref:caption-Linear-reg-MR)", fig.scap = "(ref:scaption-Linear-reg-MR)"}
+```{r Linear-reg-MR, echo = FALSE , fig.cap="(ref:caption-Linear-reg-MR)", out.width = "80%", fig.scap = "(ref:scaption-Linear-reg-MR)"}
 include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 ```
 ## Methods
 ## The INTERVAL study {#INTERVAL-study}
 
 ### Study overview
-INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants [@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
+INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants[@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
 
 ### Assessment of BMI and covariables
 
-Participants completed online questionnaires wherein they reported their height and weight. BMI was calculated as weight in kilograms divided by the square of their height in metres (kg/m^2^). Available covariables were age, sex, previous or current smoking frequency (in three categories of: never, occasional, most days or every day) and alcohol intake frequency (in four categories of: rarely, less than once a week, 1-2 times a week, 3-5 times a week or most days for the proteomics analysis, or three categories of never, previous and current in the platelet trait analysis). These covariables were chosen as they were measured in the INTERVAL collection and are measures which are thought to influence adiposity and cardiometabolic health [@Bell2018a].
+Participants completed online questionnaires wherein they reported their height and weight. BMI was calculated as weight in kilograms divided by the square of their height in metres (kg/m^2^). Available covariables were age, sex, previous or current smoking frequency (in three categories of: never, occasional, most days or every day) and alcohol intake frequency (in four categories of: rarely, less than once a week, 1-2 times a week, 3-5 times a week or most days for the proteomics analysis, or three categories of never, previous and current in the platelet trait analysis). These covariables were chosen as they were measured in the INTERVAL collection and are measures which are thought to influence adiposity and cardiometabolic health[@Bell2018a].
 
 ### Genetic data and instrument for BMI
 
-INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al. [@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K [@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry [@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium [@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software [@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. \par
+INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al. [@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. \par
 
 ### Study population
 
@@ -83,7 +78,7 @@ include_graphics(path = "figure/BMI_platelets/STROBE_diagram.pdf", dpi = NA)
 ```
 
 ### Measurement of platelet traits
-Blood was taken by venipuncture into 3mL EDTA tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument [@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation [@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM) [@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
+Blood was taken by venipuncture into 3mL EDTA tubes. Platelet parameters were measured using the Sysmex XN-1000 instrument[@Astle2016]. This analyzer provides information on cell counts by using a combination of fluorescence (PLT-F) and impedance (I) flow cytometry. The PLT-F channel used a Fluorocell fluorescent dye (oxazine), whereas the impedance method uses electrical resistance to detect platelets. Platelet indices included in the current study, along with the raw units, are provided in Table \@ref(tab:Platelet-traits). These measurements were pre-adjusted for technical covariates such as time between venipuncture and blood count, as well as instrument drift, seasonal and weekly variation[@Astle2016]. Adjustment was performed with cyclic, thin-plate and P-splines in a generalized additive model (GAM)[@Akbari2020]. Resulting platelet trait values along with their units of measurement are reported in Table \@ref(tab:Platelet-traits). These data were rank normal transformed to normalize the distribution of each trait. Therefore, each platelet index is measured in normalized standard deviation (SD) units.
 
 (ref:caption-Platelet-traits) **Platelet traits measured by Sysmex XN-1000**.
 (ref:scaption-Platelet-traits) Platelet traits measured by Sysmex XN-1000
@@ -97,7 +92,7 @@ Units <- c('%','%','10^9^/L','10^9^/L','%','fL','10^9^/L','%','fL','RFUs','RFUs'
 MeanSD <- c('36.9 (7.7)','1.3 (1.0)','255 (57)','250 (55)','0.28 (0.06)','14.0 (1.8)','10.1 (5.0)','4.2 (2.5)','11.1 (1.0)','80.3 (5.0)','53.0 (6.4)','37.9 (2.9)')
 mytable = data.frame(cbind(Name, FullName, Deriv, Units, MeanSD))
 colnames(mytable) <- c('Short name',	'Full name',	'Derivation of platelet trait',	'Units',	'Mean (SD)')
-mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-Platelet-traits)") %>% 
+mytable %>% kable(caption = "(ref:caption-Platelet-traits)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-Platelet-traits)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(2, width = "4cm")   %>%
@@ -119,7 +114,7 @@ Motivated by findings from the primary analyses described above, additional obse
 Age and sex were reported at baseline. Height and weight were obtained from medical notes. BMI was derived from weight and height (kg/m^2^). Smoking was reported as a categorical variable (0=never smoker, 1=ex-smoker for > 5 years, 2=ex-smoker for 1-5 years, 3=ex-smoker for 30 days-1 year, 4=current smoker). Platelet variables (PLT, MPV, IPF, IPC) were measured using the Sysmex XE-2100 Automated Haematology System (Oxford, UK). Blood samples were taken pre-operatively into 3.2% sodium citrate vacutainers (BD Biosciences, Milton Keynes, UK). Platelet aggregation was measured using Multiplate multiple electrode aggregometry (MEA) (Roche, Rotkreuz, Switzerland), which detects change in electrical impedance when platelets aggregate on metal electrodes. Aggregation was determined by the area under the curve (AUC) in response to platelet agonists including adrenaline (100 mg/mL), thrombin receptor activator peptide 6 test (TRAP-test), ADP-test and arachidonic acid (ASPI-test). Use of a combination of agonists therefore reflects activation of platelets via different pathways: adrenaline acts at the α2 adrenergic receptor, TRAP-6 acts at the protease-activated receptor-1 (PAR-1), ADP acts at the P2Y12 receptor and arachidonic acid at the Thromboxane A2 (TxA2) receptor.
 
 ### COPTIC statistical analysis
-The COPTIC dataset in the current analysis included 2,518 participants (23 out of 2,541 participants did not consent for future research). For the current study, only those who were not on antiplatelet therapies (prasugrel, clopidogrel or aspirin) were included (N=655). Extreme outliers that were ± 5 SDs from the mean were removed, and exposures and outcomes were rank normal transformed. . Linear regression was used to generate estimates of the association between BMI and platelet parameters within this cohort. Linear regression was used to explore the association between immature platelet count and aggregation, adjusting for age, sex and smoking status.
+The COPTIC dataset in the current analysis included 2,518 participants (23 out of 2,541 participants did not consent for future research). For the current study, only those who were not on antiplatelet therapies (prasugrel, clopidogrel or aspirin) were included (N=655). Extreme outliers that were ± 5 SDs from the mean were removed, and exposures and outcomes were rank normal transformed. Linear regression was used to generate estimates of the association between BMI and platelet parameters within this cohort. Linear regression was used to explore the association between immature platelet count and aggregation, adjusting for age, sex and smoking status.
 
 ## Results
 
@@ -172,11 +167,12 @@ Lower <- c(0.11,0.09,0.09,0.05,0.05,0.01,0.01,-0.03,'0.00','0.00',-0.01,-0.01)
 Upper <- c(0.13,0.12,0.11,0.07,0.08,0.04,0.03,-0.01,0.03,0.02,0.02,0.02)
 mytable = data.frame(cbind(Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
 colnames(mytable) <- c('Platelet trait',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>% 
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-adjust)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-adjust)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
 ```
+
 
 (ref:caption-BMI-platelets-unadjust) **Age and sex adjusted estimates for the association between BMI and platelet traits.** Βeta coefficient is the change in platelet measure in SDs per SD higher BMI. Eta squared is the proportion of variance explained by the platelet trait in an ANOVA, whereas adjusted R squared is the variance explained by all the predictor variables in the regression model.
 (ref:scaption-BMI-platelets-unadjust) Age and sex adjusted estimates for the association between BMI and platelet traits
@@ -195,7 +191,7 @@ Lower <- c(0.115,0.099,0.093,0.053,0.055,0.017,0.011,'-0.028',0.003,'-0.001','-0
 Upper <- c(0.137,0.121,0.116,0.076,0.079,0.041,0.034,'-0.005',0.027,0.022,0.021, 0.021)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper))
 colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE,  format = "markdown", caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>% 
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = TRUE,  format = "latex", caption.short = "(ref:scaption-BMI-platelets-unadjust)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3.5cm")   %>%
@@ -203,7 +199,7 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-unadjust)", booktabs = T
 ```
 
 ### Associations of covariables with BMI and platelet traits in INTERVAL
-The association of covariables (age, sex, smoking and alcohol) with BMI were evaluated (Table \@ref(tab:INT-confounders-BMI-platelets)). Included covariables in the analysis showed associations with BMI. Males had a higher BMI than females (0.18 SD, 95% CI 0.16 to 0.21, P = 9.64x10^-64^). Age was positively associated with BMI (0.011 SD higher per year older, 95% CI 0.010 to 0.012, P = 1.11x10^-182^). Alcohol showed an inverse association with BMI and smoking showed a weak positive association with BMI. Associations between covariables (age, sex, smoking, alcohol) and platelet traits were also explored (Figure \@ref(fig(confounder-platelets)). Higher age was generally inversely associated with platelet measures. Males had a lower platelet count and PCT compared to females (PLT-F was 0.57 lower 95% CI -0.60 to -0.55, P = 9.9x10^-324^). Weak associations were detected between smoking and platelet traits such as a positive association between smoking status and immature platelets. Higher alcohol consumption also showed inverse associations with measures of plateletcrit and platelet count.
+The association of covariables (age, sex, smoking and alcohol) with BMI were evaluated (Table \@ref(tab:INT-confounders-BMI-platelets)). Included covariables in the analysis showed associations with BMI. Males had a higher BMI than females (0.18 SD, 95% CI 0.16 to 0.21, P = 9.64x10^-64^). Age was positively associated with BMI (0.011 SD higher per year older, 95% CI 0.010 to 0.012, P = 1.11x10^-182^). Alcohol showed an inverse association with BMI and smoking showed a weak positive association with BMI. Associations between covariables (age, sex, smoking, alcohol) and platelet traits were also explored (Figure \@ref(fig:confounder-platelets)). Higher age was generally inversely associated with platelet measures. Males had a lower platelet count and PCT compared to females (PLT-F was 0.57 lower 95% CI -0.60 to -0.55, P = 9.9x10^-324^). Weak associations were detected between smoking and platelet traits such as a positive association between smoking status and immature platelets. Higher alcohol consumption also showed inverse associations with measures of PCT and PLT.
 
 (ref:caption-INT-confounders-BMI-platelets) **Associations between age, sex, smoking and alcohol consumption (exposures) with standardised BMI (outcome).** Beta coefficient is the change in BMI (normalized SDs) per unit increase in exposure.
 (ref:scaption-INT-confounders-BMI-platelets)  Associations between age, sex, smoking and alcohol consumption (exposures) with standardised BMI (outcome). 
@@ -221,7 +217,7 @@ LowerCI <- c(0.162,0.010,'-0.108',0.057)
 UpperCI <- c(0.205,0.012,'-0.085',0.090)
 mytable = data.frame(cbind(V, N, B, SE, P, AdjR, Fstat, CI, LowerCI, UpperCI))
 colnames(mytable) <- c('Variable',	'N',	'Beta coefficient per 1-unit increase in confounder (SDs)',	'Standard error',	'P value',	'Adjusted R^2^',	'F statistic' , "95% CI", "Lower 95% CI", "Upper 95% CI")
-mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>% 
+mytable %>% kable(caption = "(ref:caption-INT-confounders-BMI-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-INT-confounders-BMI-platelets)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
 column_spec(1, width = "4cm")   %>%
@@ -229,13 +225,13 @@ column_spec(1, width = "4cm")   %>%
   landscape()
 ```
 
-\blandscape
+
 (ref:caption-confounder-platelets) **Linear regression results for the association between age, sex, smoking and alcohol with platelet traits.** PCT = plateletcrit, PLT (F) = platelet count (PLT-F channel), PLT (I) = platelet count (impedance channel), SSC = side scatter, SFL = side fluorescence, FSC = side scatter, IPC = immature platelet count, H-IPF = high fluorescence immature platelet fraction, IPF = immature platelet fraction, MPV = mean platelet volume, P-LCR = platelet large cell ratio, PDW = platelet distribution width. For age: beta coefficient is the difference in platelet characteristics per 1 year increase in age. For sex: Beta coefficient is the difference in platelet measure in SDs in men compared with women (for sex, 1=female and 2=male). For smoking: beta coefficient is the change in platelet traits (SDs) per unit change in smoking category (1 = never, 2 = previous, 3 = current). For alcohol: beta coefficient is the change in platelet traits in SDs per unit increase in alcohol consumption (1=Rarely , 2= Less than weekly, 3=One or two weekly, 4= 3-5 weekly or every day)
 (ref:scaption-confounder-platelets) Linear regression results for the association between age, sex, smoking and alcohol with platelet traits
-```{r confounder-platelets, echo = FALSE, fig.scap="(ref:scaption-confounder-platelets)", fig.cap="(ref:caption-confounder-platelets)", out.width="90%"}
+```{r confounder-platelets, echo = FALSE, fig.scap="(ref:scaption-confounder-platelets)", fig.cap="(ref:caption-confounder-platelets)", out.width="80%"}
 include_graphics(path = "figure/BMI_platelets/Confounders_platelet_forest_plot.pdf", dpi = NA)
 ```
-\elandscape
+
 
 ### GRS for BMI associations with BMI and covariables
 To estimate the causal effect of BMI on platelet characteristics, MR was performed. The GRS for BMI (the average per SNP effect on BMI) showed a normal distribution (mean 0.08, SD 0.30, range -1.15 to 1.34) and was positively associated with BMI to the degree expected (R^2^ = 0.042, P = 2.3x10^-312^, F=1458, Table \@ref(tab:INT-GRS-confounders-platelets)). The GRS did not associate with sex, however weak associations were detected with alcohol consumption, age, and smoking status. The amount of variance explained by the GRS for BMI on any covariable included did not exceed R^2^ = 0.002 (Table \@ref(tab:INT-GRS-confounders-platelets)). As the GRS associates with BMI but does not strongly associate with the measured covariables, it is thus likely a valid instrument to perform MR.
@@ -283,7 +279,7 @@ Wu <- c(0.973,0.672,0.774,0.0003,0.334,0.001,0.527,0.936,0.746,0.001,0.433,0.223
 Fstat <- c(676,641,652,706,603,729,678,625,614,671,661,650)
 mytable = data.frame(cbind(FullName, Name, N, Beta, SE, P, R, Eta, CI, Lower, Upper, Wu, Fstat))
 colnames(mytable) <- c('Full name', 'Short Name',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'Eta^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI', "Wu-Hausman P value", 'F-statistic (GRS and BMI association)')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-BMI-platelets-MR)") %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   column_spec(1, width = "3cm")   %>%
@@ -316,7 +312,7 @@ Lower <- c(-1.434,0.005,0.027,-0.031,-0.311,-0.004,0.000,-0.051)
 Upper <- c(1.837,0.074,0.158,0.096,0.849,0.069,0.140,0.086)
 mytable = data.frame(cbind(Adjustment, Group, BMIrange, N, Beta, SE, P, R, CI, Lower, Upper))
 colnames(mytable) <- c('Adjustment', 'Group', 'BMI range',	'N',	'Beta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "markdown", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE  ) %>% 
+mytable %>% kable(caption.short = "(ref:scaption-BMI-platelets-stratified)", format = "latex", caption = "(ref:caption-BMI-platelets-stratified)", booktabs = TRUE  ) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
    column_spec(1, width = "2.5cm")   %>%
@@ -341,7 +337,7 @@ mean <- c('63.9 (16.1)',NA, '38.2 %' ,'61.8 %','27.2 (4.9)', NA, '50.8 %','38.4 
 n <- c(655,655,NA,NA,649,654,NA,NA,NA,NA,NA,655,NA,NA,NA,NA,625,621,623,623,637,634,628,629)
 mytable = data.frame("Variable"  = f, "Mean (SD) or % (all)" = co, "N (all)" = i, "Mean (SD) or % (included)" = mean, "N (included)" = n)
 colnames(mytable) <- c("Variable",  "Mean (SD) or % (all)", "N (all)", "Mean (SD) or % (included)", "N (included)" )
-mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, format = "markdown", caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>% 
+mytable %>% kable(caption = "(ref:caption-COPTIC-participants-platelets)", booktabs = TRUE, format = "latex", caption.short = "(ref:scaption-COPTIC-participants-platelets)") %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
    add_indent(c(3, 4, 7:11, 13:16), level_of_indent = 1) %>%
@@ -365,7 +361,7 @@ Lower <- c("0.00", -0.01, -0.03, -0.04)
 Upper <- c(0.15, 0.14, 0.10, 0.11)
 mytable = data.frame(cbind(Outcome, N, Beta, SE, P, R, CI, Lower, Upper))
 colnames(mytable) <- c('Outcome',	'N',	'Βeta coefficient',	'SE',	'P value',	'R^2^',	'95% CI',	'Lower 95% CI',	'Upper 95% CI')
-mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "markdown", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "(ref:caption-BMI-platelets-COPTIC)", format = "latex", caption.short="(ref:scaption-BMI-platelets-COPTIC)", booktabs = TRUE) %>% 
   kable_classic_2(full_width = F) %>%
  kable_styling(full_width = TRUE) %>%
   landscape()
